--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.0",
+    "source-map-loader": "^1.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
